--- a/.github/workflows/build-latex-with-makefile.yml
+++ b/.github/workflows/build-latex-with-makefile.yml
@@ -2,9 +2,9 @@ name: Build LaTeX Presentation
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   build:
